test-package-compiler/src/snapshots/test_package_compiler__generated_tests__errors_from_related_modules.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/errors_from_related_modules"
---
error: Type mismatch
  ┌─ src/one.gleam:2:7
  │
2 │   1 + True
  │       ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Bool

error: Type mismatch
  ┌─ src/two.gleam:2:7
  │
2 │   1 + False
  │       ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Bool
